--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     {% for post in posts %}
+    <h1>start page </h1>
         <div class="post">
             <div class="date">
                 {{ post.published_date }}
