--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {% block content %}
     {% for post in posts %}
-    <h1>start page </h1>
+    <h1>start page ok?</h1>
         <div class="post">
             <div class="date">
                 {{ post.published_date }}
