--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,13 @@
 {% extends 'blog/base.html' %}
 {% block content %}
+<!-- postsはviews.pyで設定された変数 adminでも設定可能-->
     {% for post in posts %}
     <h1>start page ok?</h1>
         <div class="post">
             <div class="date">
                 {{ post.published_date }}
             </div>
+            <!--url 'function' でviewsの関数起動-->
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaks }}</p>
         </div>
