--- a/guestboard/templates/guestboard/base.html
+++ b/guestboard/templates/guestboard/base.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <div class="container">
+  <!-- success か　error-->
     {% if messages %}
       <ul class="messages">
         {% for message in messages %}
@@ -18,6 +19,7 @@
         {% endfor %}
       </ul>
     {% endif %}
+    <!-- ここにindexがはいる-->
     {% block body %}
     {% endblock %}
   </div>
