--- a/blog/templates/blog/my_page_front.html
+++ b/blog/templates/blog/my_page_front.html
@@ -19,16 +19,19 @@
     <div class="row">
       <div class="col-sm-8">
         {% for posting in post %}
+        <form action="{% url 'delete' otitle=posting.title%}" method="post">{% csrf_token %}
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">{{ posting.title }} <label class="date">投稿日時：{{ posting.created_date }}</label></h3>
+              <h3 class="panel-title">{{ posting.title }} <label class="date">投稿日時：{{ posting.created_date }}</label><input type="submit" name="button" value="削除">
+              </h3>
             </div>
             <div class="panel-body">
               {{ posting.text }}
             </div>
           </div>
+        </form>
         {% endfor %}
       </div>
     </div>
-  </div>
+    </div>
 {% endblock content %}
