--- a/blog/templates/blog/test.html
+++ b/blog/templates/blog/test.html
@@ -8,11 +8,80 @@
     </head>
     <body>
     <div class="page-header">
-        <a href="" class="top-menu"><span class="glyphicon glyphicon-plus">Interest</span></a>
-        <a href="" class="top-menu"><span class="glyphicon glyphicon-plus">Trend</span></a>
-        <a href="" class="top-menu"><span class="glyphicon glyphicon-plus">Task</span></a>
-        <h1><a href="">Test Page!!</a></h1>
+  <ul class="nav nav-pills nav-right">
+  <li><h1>Test Page!!</h1></li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle mydropper" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-plus">Task</span></a>
+    <ul class="dropdown-menu">
+      <li class="dropdown-header">Header</li>
+      <li>Another action</li>
+      <li><a href="#">Something else here</a></li>
+      <li role="separator" class="divider"></li>
+      <li><a href="#">Separated link</a></li>
+      <li class="disabled"><a href="#">Disabled link</a></li>
+    </ul>
+  </li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle mydropper" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-plus">Trend</span></a>
+    <ul class="dropdown-menu">
+      <li class="dropdown-header">Header</li>
+      <li>Another action</li>
+      <li><a href="#">Something else here</a></li>
+      <li role="separator" class="divider"></li>
+      <li><a href="#">Separated link</a></li>
+      <li class="disabled"><a href="#">Disabled link</a></li>
+    </ul>
+  </li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle mydropper" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-plus">Interest</span></a>
+    <ul class="dropdown-menu">
+      <li class="dropdown-header">Header</li>
+      <li>Another action</li>
+      <li><a href="#">Something else here</a></li>
+      <li role="separator" class="divider"></li>
+      <li><a href="#">Separated link</a></li>
+      <li class="disabled"><a href="#">Disabled link</a></li>
+    </ul>
+  </li>
+  </ul>
     </div>
+    <!--
+    <ul class="nav nav-pills">
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">通常のDropdown <span class="caret"></span></a>
+    <ul class="dropdown-menu">
+      <li class="dropdown-header">Header</li>
+      <li>Another action</li>
+      <li><a href="#">Something else here</a></li>
+      <li role="separator" class="divider"></li>
+      <li><a href="#">Separated link</a></li>
+      <li class="disabled"><a href="#">Disabled link</a></li>
+    </ul>
+  </li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-plus">右揃え</span></a>
+    <ul class="dropdown-menu dropdown-menu-right">
+      <li class="dropdown-header">Header</li>
+      <li clss="mydropper">Another action</li>
+      <li><a href="#">Something else here</a></li>
+      <li role="separator" class="divider"></li>
+      <li><a href="#">Separated link</a></li>
+      <li class="disabled"><a href="#">Disabled link</a></li>
+    </ul>
+  </li>
+  <li class="dropdown">
+    <a href="#" class="dropdown-toggle mydropper" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-plus">右揃え２</span></a>
+    <ul class="dropdown-menu dropdown-menu-right">
+      <li class="dropdown-header">Header</li>
+      <li><a href="#">Another action</a></li>
+      <li><a href="#">Something else here</a></li>
+      <li role="separator" class="divider"></li>
+      <li><a href="#">Separated link</a></li>
+      <li class="disabled"><a href="#">Disabled link</a></li>
+    </ul>
+  </li>
+</ul>
+-->
     <div>
             {% for post in posts %}
                 {{ post }}
