--- a/static/css/my_page.css
+++ b/static/css/my_page.css
@@ -11,7 +11,9 @@ body {
     /*background-color: #ff9400;*/
     background-color: darkturquoise;
     margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    padding: 40px 40px 40px 40px;
+    /*height: 1000px;
+    width: 500px;*/
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -26,6 +28,7 @@ body {
 
 h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
+    color: #ffffff;
 }
 
 .date {
@@ -54,4 +57,12 @@ h1, h2, h3, h4 {
 
 .post h1 a, .post h1 a:visited {
     color: #000000;
+}
+
+.mydropper{
+  color:#ffffff;
+  background-color: darkturquoise;
+  float: right;
+  font-size: 18pt;
+  margin-right: 20px;
 }
